Fix bottom spacing when page grow up

--- a/app/sass/globals.sass
+++ b/app/sass/globals.sass
@@ -13,7 +13,6 @@ body
 
 body
   width: 100vw
-  height: 100vh
   display: flex
   justify-content: center
   background-color: $bg-color-base
